# orangebox

./: .gitignore  README.md  example.py  parser_benchmark.py  parser_profile.py  parser_test.py  pyproject.toml  readthedocs.yaml  setup.py
docs/: conf.py  development.rst  index.rst  parser.rst  reader.rst  scripts.rst  types.rst
orangebox/: __init__.py  context.py  decoders.py  defaults.py  errors.py  events.py  parser.py  predictors.py  reader.py  tools.py  types.py
scripts/: bb2csv  bb2gpx  bbsplit
